--- a/src/Component/RecipeList/RecipeList.css
+++ b/src/Component/RecipeList/RecipeList.css
@@ -12,7 +12,7 @@
 
 .recipe_card_content_sec{
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: 80% 20%;
     padding: 10px;
     column-gap: 10px;
     margin: 0;
@@ -48,6 +48,7 @@
     transition: all .5s ease;
     padding: 0;
     margin: 0;
+    justify-self: end;
     cursor: pointer;
 }
 
