--- a/src/Component/Home/Home.css
+++ b/src/Component/Home/Home.css
@@ -93,10 +93,10 @@ header::after{
 }
 
 .card_text{
-    padding: 20px 5px;
+    padding: 10px 5px;
     align-items: center;
     text-decoration: none;
-    text-align: left;
+    text-align: center;
     color: black;
     font-size: calc(15px + (20 - 15) * ((100vw - 300px) / (1600 - 300)));
 }
