--- a/src/Component/RecipeList/RecipeList.css
+++ b/src/Component/RecipeList/RecipeList.css
@@ -59,7 +59,7 @@
 .snackbar{
     background-color: #333;
     height: fit-content;
-    width: 280px;
+    width: 300px;
     padding: 10px 10px;
     position: fixed;
     text-align: center;
@@ -98,10 +98,19 @@
     .recipe_card:hover::after{
         margin-top: 10px;
     }
+
+    .snackbar{
+        left: auto;
+    }
+
 }
 
 @media screen and (max-width:320px){
     .recipe_card{
         width: 250px;
     }
+
+
 }
+
+
