--- a/src/Component/Login/Login.css
+++ b/src/Component/Login/Login.css
@@ -113,6 +113,22 @@
     cursor: pointer;
 }
 
+.logedin_text{
+    margin: 200px 0;
+    text-align: center;
+    font-size: 20px;
+    text-transform: capitalize;
+}
+
+.logedin_text > span{
+    color: #FF9D33;
+    font-size: 40px;
+}
+
+.logedin_text > p > span{
+    color: #FF9D33;
+
+}
 
 @media screen and (max-width:500px){
     .login_signup{
