--- a/src/Component/RecipeList/RecipeList.css
+++ b/src/Component/RecipeList/RecipeList.css
@@ -3,7 +3,7 @@
     display: grid;
     margin-top: 30px;
     width: 300px;
-    height: 320px;
+    height: 300px;
     box-shadow: 0 0 4px rgb(145, 145, 145);
     border: 1px solid rgb(204, 204, 204);
     transition: all .5s ease;
@@ -16,7 +16,7 @@
     padding: 10px;
     column-gap: 10px;
     margin: 0;
-    align-items: flex-start;
+    align-items: center;
 }
 .recipe_card_content{
     color: black;
@@ -26,6 +26,26 @@
 }
 
 
+.recipe_card::after{
+    display: flex;
+    content: 'Read More';
+    position: absolute;
+    background-color: #FF9D33;
+    width: 300px;
+    height: 200px;
+    opacity: .8;
+    align-items: center;
+    justify-content: center;
+    font-size: 25px;
+    color: white;
+    transition: all .5s linear;
+    opacity: 0;
+}
+
+
+.recipe_card:hover::after{
+    opacity: .9;
+}
 
 
 .recipe_card_img{
@@ -34,12 +54,12 @@
 
 
 
-.recipe_card:hover::after{
+/* .recipe_card:hover::after{
     content: 'Click to Read More';
     background-color: #FF9D33;
     color: white;
     text-align: center;
-}
+} */
 
 .save_btn{
     border: none;
@@ -50,6 +70,12 @@
     margin: 0;
     justify-self: end;
     cursor: pointer;
+}
+
+.no_recipe{
+    padding-top: 100px;
+    padding-left: 50px;
+    font-size: 30px;
 }
 
 .save_btn:hover{
@@ -95,14 +121,15 @@
   to {bottom: 0; opacity: 0;}
 }
 @media screen and (max-width:500px){
-    .recipe_card:hover::after{
-        margin-top: 10px;
-    }
-
+    
     .snackbar{
         left: auto;
     }
 
+    .no_recipe{
+        font-size: 25px;
+        text-transform: capitalize;
+    }
 }
 
 @media screen and (max-width:320px){
@@ -110,7 +137,10 @@
         width: 250px;
     }
 
-
+    .recipe_card::after{
+        width: 250px;
+        height: 165px;
+    }
 }
 
 
