--- a/src/Component/Recipes/Recipes.css
+++ b/src/Component/Recipes/Recipes.css
@@ -47,6 +47,10 @@
     margin-top: 30px;
 }
 
+.active_cat{
+    color: #FF9D33;
+}
+
 .categories_list > li >button{
     margin-bottom: 20px;
     border: none;
