--- a/src/App.css
+++ b/src/App.css
@@ -25,3 +25,7 @@ html,body{
     text-decoration: none;
     font-size: calc(20px + (35 - 20) * ((100vw - 300px) / (1600 - 300)));;
 }
+
+a:visited{
+    color: #FF9D33;
+}
