--- a/src/Component/Login/Login.css
+++ b/src/Component/Login/Login.css
@@ -1,4 +1,4 @@
-.login_signup{
+.login_signup {
     margin: 50px auto;
     display: flex;
     flex-direction: column;
@@ -6,14 +6,14 @@
     background-color: white;
 }
 
-.selection_btn{
+.selection_btn {
     width: 100%;
     display: flex;
     box-shadow: 0 -1.5px 4px rgb(145, 145, 145);
     border: 1px solid rgb(231, 231, 231);
 }
 
-.selection_btn > button{
+.selection_btn>button {
     width: 100%;
     padding: 10px 0;
     color: black;
@@ -25,113 +25,136 @@
     cursor: pointer;
 }
 
-.active_tab{
+.active_tab {
     border-bottom: 4px solid #FF9D33 !important;
 }
 
-.form_container{
+.form_container {
     display: flex;
     flex-direction: column;
     margin-top: 40px;
-    border:1px solid #FF9D33;
+    border: 1px solid #FF9D33;
     width: 100%;
     padding: 20px;
     box-shadow: 0 0 4px rgb(145, 145, 145);
     border: 1px solid rgb(204, 204, 204);
 }
 
-.form_header{
+.form_header {
     text-align: center;
     font-weight: bold;
     font-size: calc(25px + (30 - 25) * ((100vw - 300px) / (1600 - 300)));
-    border-bottom: 2px solid #FF9D33 ;
+    border-bottom: 2px solid #FF9D33;
     width: 100%;
 }
 
-.form_inputs_container{
+.form_inputs_container {
     padding-top: 20px;
     width: 100%;
 }
 
-.input_label{
+.input_label {
     font-weight: bold;
-    font-size: calc(15px + (25 - 15) * ((100vw - 300px) / (1600 - 300))) ;
+    font-size: calc(15px + (25 - 15) * ((100vw - 300px) / (1600 - 300)));
 }
 
-.form_input{
-    padding: 8px ;
+.form_input {
+    padding: 8px;
     width: 100%;
     border: 1px solid #fcc182;
     border-radius: 2px;
     transition: all .5s ease;
 }
 
-.form_input:focus{
+.form_input:focus {
     border: 1px solid #FF9D33;
     box-shadow: 0 0 8px #FF9D33;
 }
 
-.input_wrap{
+.input_wrap {
     margin-bottom: 20px;
 }
 
-.form_btn{
+.form_btn {
     width: 100%;
 }
 
-.form_btn > button{
+.form_btn>button {
     width: 100%;
     padding: 8px;
     background-color: white;
     border: 2px solid #FF9D33;
     cursor: pointer;
     font-weight: bold;
-    font-size: calc(15px + (25 - 15) * ((100vw - 300px) / (1600 - 300)))  ;
+    font-size: calc(15px + (25 - 15) * ((100vw - 300px) / (1600 - 300)));
     transition: all .5s ease;
 }
 
-.form_btn > button:hover{
+.form_btn>button:hover {
     background-color: #FF9D33;
     color: white;
 }
 
-.form_feedback{
+.form_feedback {
     padding-top: 2px;
     color: red;
-    font-size: calc(12px + (18 - 12) * ((100vw - 300px) / (1600 - 300)))  ;
+    font-size: calc(12px + (18 - 12) * ((100vw - 300px) / (1600 - 300)));
 }
 
-.signup_text{
-    font-size: calc(12px + (15 - 12) * ((100vw - 300px) / (1600 - 300)))  ;
+.signup_text {
+    font-size: calc(12px + (15 - 12) * ((100vw - 300px) / (1600 - 300)));
     font-weight: bold;
     text-align: center;
-    padding-top: 10px;    
+    padding-top: 10px;
 }
 
-.signup_text > span{
+.signup_text>span {
     color: #FF9D33;
     cursor: pointer;
 }
 
-.logedin_text{
+.logedin_text {
     margin: 200px 0;
     text-align: center;
     font-size: 20px;
     text-transform: capitalize;
 }
 
-.logedin_text > span{
+.logedin_text>span {
     color: #FF9D33;
     font-size: 40px;
 }
 
-.logedin_text > p > span{
+.logedin_text>p>span {
     color: #FF9D33;
-
 }
 
-@media screen and (max-width:500px){
-    .login_signup{
+.google-btn {
+    width: 100%;
+    margin-top: 10px;
+    background-color: #DE3F32;
+    color: white;
+    padding: 8px;
+    border: none;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: calc(15px + (25 - 15) * ((100vw - 300px) / (1600 - 300)));
+}
+
+.fb-btn {
+    width: 100%;
+    margin-top: 10px;
+    background-color: #4C69BA;
+    color: white;
+    padding: 8px;
+    border: none;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: calc(15px + (25 - 15) * ((100vw - 300px) / (1600 - 300)));
+}
+
+@media screen and (max-width:500px) {
+    .login_signup {
         width: 300px;
         margin: 50px auto;
     }
