--- a/src/AdminComponent/AddPost/AddPost.css
+++ b/src/AdminComponent/AddPost/AddPost.css
@@ -1,79 +1,119 @@
 .addpost {
-  margin: 30px 50px;
-  height: 100%;
+    margin: 30px 50px;
+    height: 100%;
 }
 
 .addpost_form {
-  height: 100%;
+    height: 100%;
 }
 
 .addpost_input_fields_container {
-  width: 100%;
-  margin: 20px 0;
+    margin: 20px 0;
+}
+
+.addpost_input_fields_container label {
+    color: #FF9D33;
+    font-weight: bolder;
+    font-size: 1.5rem;
 }
 
 .addpost_inputs {
-  width: 100%;
-  padding: 10px 0;
+    padding: 10px 0;
 }
 
-.addpost_inputs > input {
-  width: 50%;
-  padding: 8px;
+.addpost_inputs>input {
+    width: 50%;
+    padding: 15px 8px;
+    border: 2px solid black;
 }
 
-.addpost_inputs > textarea {
-  width: 50%;
-  padding: 8px;
+.addpost_inputs>textarea {
+    width: 100%;
+    padding: 15px 8px;
+    border: 2px solid black;
 }
 
 .quill_container {
-  margin-bottom: 100px;
+    margin-bottom: 100px;
 }
 
 .ingredient_quill {
-  width: 100%;
-  margin-bottom: 80px;
-  height: 200px;
+    width: 100%;
+    margin-bottom: 80px;
+    height: 200px;
 }
 
 .recipe_quill {
-  width: 100%;
-  height: 200px;
+    width: 100%;
+    height: 200px;
 }
 
 .tag_container {
-  margin: 20px 0;
+    margin: 20px 0;
+}
+
+.tag-head {
+    color: #FF9D33;
 }
 
 .tag_btn {
-  background-color: rgb(199, 232, 243);
-  border: none;
-  padding: 5px 20px;
-  margin: 10px 15px 10px 0;
-  font-weight: bold;
-  letter-spacing: 1px;
-  transition: all 0.5s ease;
-  cursor: pointer;
+    color: white;
+    background-color: #FF9D33;
+    border: none;
+    padding: 10px 20px;
+    margin: 10px 15px 10px 0;
+    font-weight: bold;
+    letter-spacing: 1px;
+    transition: all 0.5s ease;
+    cursor: pointer;
 }
 
 .tag_btn:hover {
-  background-color: lightblue;
+    background-color: #fc8a0f;
 }
 
 .selected_tags {
-  background-color: lightblue;
-  border: none;
-  padding: 8px;
-  font-size: small;
-  margin: 10px 15px 10px 0;
-  cursor: pointer;
-  font-weight: bold;
-  letter-spacing: 1px;
-  transition: all 0.5s ease;
+    color: white;
+    background-color: #FF9D33;
+    border: none;
+    padding: 10px 20px;
+    font-size: small;
+    margin: 10px 15px 10px 0;
+    cursor: pointer;
+    font-weight: bold;
+    letter-spacing: 1px;
+    transition: all 0.5s ease;
 }
 
-.selected_tags_container{
-  padding: 10px 0;
-  
+.selected_tags_container {
+    padding: 10px 0;
+}
+
+.text-center {
+    text-align: center;
+}
+
+input[type=file]::file-selector-button {
+    border: none;
+    width: 100%;
+    padding: 8px;
+    background-color: #FF9D33;
+    color: white;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: calc(15px + (25 - 15) * ((100vw - 300px) / (1600 - 300)));
+    transition: all .5s ease;
+}
+
+.submit-btn {
+    margin-bottom: 30px;
+    border: none;
+    width: 30%;
+    padding: 8px;
+    background-color: #FF9D33;
+    color: white;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: calc(15px + (25 - 15) * ((100vw - 300px) / (1600 - 300)));
+    transition: all .5s ease;
 }
